[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "userup"
version = "0.0.1"
authors = [
  { name="Eric Larson", email="eric@hillsidelabs.io" },
]
description = "A client for the UserUp Userservice"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cloudevents>=1.2.0",
		"requests"
]

[project.urls]
Homepage = "https://github.com/hillside-labs/userservice-python"
Issues = "https://github.com/hillside-labs/userservice-python/issues"
